--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Taller3_Mendez_Useche</string>
+
+    <string name="txtMaps">Mapa de Google</string>
+    <string name="btnSeguir">Seguir</string>
+
+
+    <string name="txtInformacion">Información</string>
+    <string name="txtCorreo">Correo:</string>
+    <string name="txtCodigo">Código:</string>
+    <string name="txtNota">Nota:</string>
 </resources>
