--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="txtMaps">Mapa de Google</string>
     <string name="btnSeguir">Seguir</string>
 
+    <string name="txtIngreso">Ingresar</string>
+    <string name="hintCodigo">Codigo: </string>
+    <string name="hintCorreo">Correo: </string>
+    <string name="btnVerificar">Verificar Nota</string>
 
     <string name="txtInformacion">Información</string>
     <string name="txtCorreo">Correo:</string>
